Email verification added + some changes
